--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home d-flex justify-content-center align-items-center text-white">
     <div  class="text-center">
-        <img src="assets/images/avataaars.svg" alt="" class="mb-3">
+        <img src="./assets/images/avataaars.svg" alt="" class="mb-3">
 
         
                 <app-star [headingText]="'start Framework'" [bgColor]="'white'"></app-star>
